# aliyun-sdk

./: Cargo.toml  readme.md
projects/aliyun/: Cargo.toml
projects/aliyun-dns/: Cargo.toml
projects/aliyun-dns/src/: lib.rs
projects/aliyun-error/: Cargo.toml  readme.md
projects/aliyun-error/src/: convert.rs  display.rs  lib.rs
projects/aliyun-error/src/convert/: for_lettre.rs  for_reqwest.rs  mod.rs
projects/aliyun-oss/: Cargo.toml  readme.md
projects/aliyun-oss/src/: auth.rs  lib.rs  oss.rs  url.rs
projects/aliyun-oss/src/async_impl/: object.rs
projects/aliyun-sms/: Cargo.toml
projects/aliyun-sms/src/: aliyun.rs  lib.rs
projects/aliyun-sms/tests/: aliyun.rs
projects/aliyun-smtp/: Cargo.toml  readme.md
projects/aliyun-smtp/src/: lib.rs
projects/aliyun-smtp/src/for_poem/: mod.rs
projects/aliyun-smtp/src/for_serde/: mod.rs
projects/aliyun-smtp/src/helpers/: mod.rs
projects/aliyun-smtp/src/provider/: mod.rs
projects/aliyun-smtp/src/provider/aliyun/: mod.rs
projects/aliyun/src/: auth.rs  lib.rs  metadata.rs
projects/aliyun/src/sdk/: mod.rs
projects/aliyun/tests/: readme.md
projects/dash-model/: Cargo.toml  readme.md
projects/dash-model/src/: lib.rs
projects/dash-model/src/client/: mod.rs
projects/dash-scope/: Cargo.toml
projects/dash-scope/src/: lib.rs
projects/dash-scope/src/application/: mod.rs
projects/dash-scope/src/client/: mod.rs
