[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/dash-model",
    "projects/sub_projects",
]
exclude = [
    "projects/.DS_Store",
]

[workspace.dependencies]

[workspace.dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["rustls-tls", "socks"]

[profile.release]
lto = true
panic = "abort"
