[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/aliyun",
    "projects/aliyun-oss",
    "projects/aliyun-sms",
    "projects/aliyun-dns",
    "projects/aliyun-smtp",
    "projects/dash-scope",
]
exclude = [
    "projects/.DS_Store",
]

[workspace.dependencies.aliyun-error]
version = "0.0.1"
path = "projects/aliyun-error"

[workspace.dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["rustls-tls", "socks"]

[profile.release]
lto = true
panic = "abort"
