[package]
name = "aliyun-dns"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "阿里云统一错误处理"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/aliyun-sdk/tree/dev"
repository = "https://github.com/oovm/aliyun-sdk/tree/dev/projects/aliyun-error"
documentation = "https://docs.rs/aliyun-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
anyhow = "1.0.96"
url = "2.3.1"
base64 = "0.22.1"
rand = "0.9.0"
chrono = "0.4.39"
hmac = "0.12.1"
sha1 = "0.10.6"

[features]
