[package]
name = "aliyun-error"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "阿里云统一错误处理"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/aliyun-sdk/tree/dev"
repository = "https://github.com/oovm/aliyun-sdk/tree/dev/projects/aliyun-error"
documentation = "https://docs.rs/aliyun-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
reqwest = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
