[package]
name = "aliyun-oss"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "阿里云 OSS"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/aliyun-sdk/tree/dev"
repository = "https://github.com/oovm/aliyun-sdk/tree/dev/projects/aliyun-error"
documentation = "https://docs.rs/aliyun-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.39"
hmac = "0.12.1"
base64 = "0.22.1"
sha1 = "0.10.6"
urlencoding = "2.1.3"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", optional = true }

[dependencies.aliyun-error]
workspace = true
features = ["reqwest"]

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15"
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = []
