[package]
name = "aliyun-sms"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "阿里云 SDK"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/aliyun-sdk/tree/dev"
repository = "https://github.com/oovm/aliyun-sdk/tree/dev/projects/aliyun-error"
documentation = "https://docs.rs/aliyun-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
reqwest = { workspace = true, features = ["json"] }
base64 = "0.13"
chrono = "0.4"
rand = "0.8"
ring = "0.16"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
