[package]
name = "aliyun-smtp"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "阿里云 SMTP"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/aliyun-sdk/tree/dev"
repository = "https://github.com/oovm/aliyun-sdk/tree/dev/projects/aliyun-error"
documentation = "https://docs.rs/aliyun-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
poem = "3.1.6"

[dependencies.aliyun-error]
workspace = true
features = ["lettre"]

[dev-dependencies]


[features]
default = []

