[package]
name = "aliyun-sdk"
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "阿里云 SDK"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/aliyun-sdk/tree/dev"
repository = "https://github.com/oovm/aliyun-sdk/tree/dev/projects/aliyun-error"
documentation = "https://docs.rs/aliyun-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies.aliyun-error]
workspace = true
features = []

[dependencies.aliyun-oss]
version = "0.0.0"
path = "../aliyun-oss"
optional = true

[dependencies.aliyun-smtp]
version = "0.0.0"
path = "../aliyun-smtp"
optional = true

[dependencies.aliyun-sms]
version = "0.0.0"
path = "../aliyun-sms"
optional = true

[features]
default = []
