[package]
name = "dashscope"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "阿里云灵积"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/aliyun-sdk/tree/dev/"
repository = "https://github.com/oovm/aliyun-sdk/tree/dev/projects/dash-scope"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }

[dependencies.aliyun-error]
workspace = true
features = ["reqwest"]

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
